Add missing pytest markers (e2e, performance, memory)
- Added e2e marker for end-to-end workflow tests
- Added performance marker for load/performance tests
- Added memory marker for memory usage tests

This fixes pytest collection errors when running the new test suite.

--- a/pytest.ini
+++ b/pytest.ini
@@ -15,3 +15,7 @@ markers =
     unit: Unit tests for individual functions
     integration: Integration tests for API endpoints
     slow: Tests that take longer to run
+    e2e: End-to-end workflow tests
+    performance: Performance and load tests
+    security: Security-focused tests
+    memory: Memory usage tests
